added input for text and file

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
     <label for="textSubmission">
       <h1>Enter JSON into the text field or upload a file and then press submit</h1>
     </label>
-    <textarea id="textSubmission" name="w3review" rows="30" cols="200">
-      Please use input similar to the results shown here -> https://randomuser.me/
+    <textarea id="textSubmission" rows="30" cols="200">
+    Please use input similar to the results shown here -> https://randomuser.me/
     </textarea>
     <br>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Submit" onclick="handleSubmit()"/>
     <input type="file" id="fileSubmission" />
   </form>
 </body>
