--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>User Data Analyzer</title>
   <link rel="stylesheet" href="../static/css/styles.css">
+  <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
   <script src="../static/js/scripts.js"></script>
 </head>
 <body>
-  <form>
+  <form onsubmit="return false">
     <label for="textSubmission">
       <h1>Enter JSON into the text field or upload a file and then press submit</h1>
     </label>
@@ -17,7 +17,7 @@
     </textarea>
     <br>
     <input type="submit" value="Submit" onclick="handleSubmit()"/>
-    <input type="file" id="fileSubmission" />
+    <input type="file" id="fileSubmission" name="json_file" accept=".json" />
   </form>
 </body>
 </html>
