--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <title>User Data Analyzer</title>
   <link rel="stylesheet" href="../static/css/styles.css">
   <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
-  <script src="../static/js/scripts.js"></script>
+  <script src="../static/js/main.js"></script>
 </head>
 <body>
   <form onsubmit="return false">
