added tests and refactored code in app.py/helpers.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,10 @@
     Please use input similar to the results shown here -> https://randomuser.me/
     </textarea>
     <br>
-    <input type="submit" value="Submit" onclick="handleSubmit()"/>
+    <input class="buttons" type="submit" value="Submit" onclick="handleSubmit()"/>
+    <label for="fileSubmission" class="buttons">
+      Upload File
+    </label>
     <input type="file" id="fileSubmission" name="json_file" accept=".json" />
   </form>
 </body>
